# my-logger-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: release.yml
docs/: specification.md
proto/: MyLogger.proto
src/: main.rs  settings.rs  telegram_api.rs  utils.rs
src/app/: app.rs  logs_queue.rs  mod.rs
src/background/: flush_to_db_timer.rs  flush_to_elastic_timer.rs  flush_to_sqlite_timer.rs  gc_time.rs  mod.rs  notify_telegram_timer.rs  persist_statistics_timer.rs
src/cache/: filter_logs.rs  mod.rs
src/flows/: add_ignore_event.rs  get_events.rs  init.rs  mod.rs  post_items.rs  remove_ignore_event.rs  search_and_scan.rs  search_logs.rs  write_hour_statistics.rs
src/flows/ignore_event/: add.rs  mod.rs  remove.rs
src/flows/ignore_single_event/: add.rs  delete.rs  get.rs  mod.rs  persistence.rs
src/grpc_server/: mapper.rs  mod.rs  my_logger_grpc_service.rs  server.rs
src/hourly_statistics/: hourly_statistics.rs  mod.rs  statistics_hour.rs
src/http/: builder.rs  mod.rs  start_up.rs
src/http/controllers/: mod.rs  shared_contract.rs
src/http/controllers/logs_income/: contracts.rs  mod.rs  post_logs_action.rs  post_logs_v2_action.rs
src/http/controllers/logs_income/contracts/: mod.rs  seq.rs  v2.rs
src/http/controllers/settings/: contracts.rs  delete_ignore_action.rs  get_ignore_action.rs  mod.rs  post_ignore_action.rs
src/ignore_single_events/: event_matching.rs  ingnore_single_events.rs  mod.rs
src/ignore_single_events_cache/: event_matching.rs  ingnore_single_events_cache.rs  mod.rs
src/insights_repo/: insights_repo.rs  mod.rs
src/log_item/: log_item.rs  logs_queue.rs  mod.rs
src/mcp/: builder.rs  dashboard_statistics_tool_call.rs  ignore_rules_tool_call.rs  mod.rs  search_logs_tool_call.rs
src/postgres/: dto.rs  logs_repo.rs
src/repo/: date_key.rs  dto.rs  hour_statistics_repo.rs  ignore_events_repo.rs  logs_repo.rs  mod.rs  sqlite_logs_repo.rs
src/repo/hour_statistics/: hour_statistics_repo.rs  mod.rs
src/repo/ignore_events/: ignore_event_model.rs  ignore_events_repo.rs  mod.rs  persistence.rs
src/repo/ignore_single_events/: ignore_single_event_model.rs  ignore_single_events_repo.rs  mod.rs  persistence.rs
src/repo/logs/: file_utils.rs  logs_repo.rs  mod.rs  ten_min_key.rs  ten_min_log.rs  ten_min_log_iterator.rs  ten_min_log_model.rs
src/repo/statistics/: hour_statistics_repo.rs  hourly_statistics_model.rs  mod.rs  persist.rs
src/telegram/: api.rs  mod.rs  telegram_notification_data.rs
