[package]
name = "my-logger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }
my-logger = { tag = "1.0.3", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

my-settings-reader = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

my-grpc-extensions = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-server",
] }


flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url.git" }

my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }

my-postgres = { tag = "0.5.2", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-tls",
    "macros",
] }

async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
signal-hook = "*"
serde_yaml = "*"
serde_json = "*"
serde_repr = "*"
uuid = { version = "*", features = ["v4"] }
futures-core = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
