[package]
name = "my-logger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

my-grpc-extensions = { tag = "0.6.6", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-server",
] }


flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }

my-json = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-json.git" }

elastic-client = { git = "https://github.com/MyJetTools/elastic-client", tag = "0.1.3" }

#my-postgres = { tag = "0.5.2", git = "https://github.com/MyJetTools/my-postgres.git", features = [
#    "with-tls",
#    "macros",
#] }

tantivy = "0.26"
turso = "0.6"

mcp-server-middleware = { tag = "0.8.3", git = "https://github.com/my-ai-utils/mcp-server-middleware.git" }
my-ai-agent = { tag = "0.1.0", git = "https://github.com/my-ai-utils/my-ai-agent.git", features = [
    "agent",
] }

async-trait = "*"
syn = "2"
base64 = "0.22"
tonic = "0.14"
tonic-prost = "0.14"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "0.14"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
signal-hook = "*"
serde_yaml = "*"
serde_json = "*"
serde_repr = "*"
uuid = { version = "*", features = ["v4"] }
futures-core = "*"
reqwest = "*"
itoa = "1"


[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.3" }
